--- a/food.html
+++ b/food.html
@@ -16,5 +16,7 @@
             <li class="a">met</li>
         </ul>
     </div>
+    <img src="style/images/download (1).jfif" alt="food1">
+    <img src="style/images/download.jfif" alt="food2">
 </body>
 </html>
