--- a/food.html
+++ b/food.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/food.css">
     <title>Food Website</title>
+    <style>
+        
+    </style>
 </head>
 <body>
     <h1>Food Website</h1>
