--- a/food.html
+++ b/food.html
@@ -21,5 +21,18 @@
     </div>
     <img src="style/images/download (1).jfif" alt="food1">
     <img src="style/images/download.jfif" alt="food2">
+    <form action="#">
+        <span>Course:</span>
+        <input type="text" name="course" autofocus="" list="course">
+        <datalist id="course">
+            <option value="HTML">HTML</option>
+            <option value="CSS">CSS</option>
+            <option value="PHP">PHP</option>
+            <option value="LARAVEL">LARAVEL</option>
+        </datalist>
+        <input type="submit" name="" id="">
+    </form>
+    a<sup>2</sup>+b<sup>2</sup>
+    
 </body>
 </html>
